<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/tab_live"
        android:icon="@drawable/ic_tab_live"
        android:title="@string/tab_live" />
    <item
        android:id="@+id/tab_songs"
        android:icon="@drawable/ic_tab_songs"
        android:title="@string/tab_songs" />
    <item
        android:id="@+id/tab_goods_events"
        android:icon="@drawable/ic_tab_goods_events"
        android:title="@string/tab_goods_events" />
</menu>
